--- a/productshop/shopproduct.html
+++ b/productshop/shopproduct.html
@@ -33,10 +33,10 @@
             <!-- Navbar chính giữa -->
             <nav class="navbar collapse" id="navbarNav">
                 <div class="navbar-links">
-                    <a href="/public/info/home/index.html">Trang chủ</a>
-                    <a href="/productshop/shopproduct.html" class="active">Cửa hàng</a>
-                    <a href="/productshop/sick.html">Tra cứu bệnh</a>
-                    <a href="/man/html/index_m.html">Quản lý</a>
+                    <a href="/BTLWEB/public/info/home/index.html">Trang chủ</a>
+                    <a href="/BTLWEB/productshop/shopproduct.html" class="active">Cửa hàng</a>
+                    <a href="/BTLWEB/productshop/sick.html">Tra cứu bệnh</a>
+                    <a href="/BTLWEB/man/html/index_m.html">Quản lý</a>
                 </div>
             </nav>
     
@@ -54,10 +54,10 @@
 
     <div class="navbar-mobile" id="navbarNavMobile">
         <div class="navbar-links">
-            <a href="/public/info/home/index.html">Trang chủ</a>
-            <a href="/productshop/shopproduct.html" class="active">Cửa hàng</a>
-            <a href="/productshop/sick.html">Tra cứu bệnh</a>
-            <a href="/man/html/index_m.html">Quản lý</a>
+            <a href="/BTLWEB/public/info/home/index.html">Trang chủ</a>
+            <a href="/BTLWEB/productshop/shopproduct.html" class="active">Cửa hàng</a>
+            <a href="/BTLWEB/productshop/sick.html">Tra cứu bệnh</a>
+            <a href="/BTLWEB/man/html/index_m.html">Quản lý</a>
         </div>
     </div>  
 
