--- a/public/info/home/index.html
+++ b/public/info/home/index.html
@@ -246,7 +246,7 @@
                 <div class="testimonial-card">
                     <div class="user-info-container">
                         <div class="user-info">
-                            <img alt="User profile picture" height="50" src="https://storage.googleapis.com/a1aa/image/e7fSXhdvH6imp0WbnHfFYwFipYTxqQ5kVfTR6IozLUz4AfYdC.jpg" width="50"/>
+                            <img alt="User profile picture" height="50" src="../../assets/image/good.jpg" width="50"/>
                             <div>
                                 <div class="user-name">Nguyxn Truong</div>
                                 <div class="rating">
@@ -265,7 +265,7 @@
                 <div class="testimonial-card">
                     <div class="user-info-container">
                         <div class="user-info">
-                            <img alt="User profile picture" height="50" src="https://storage.googleapis.com/a1aa/image/e7fSXhdvH6imp0WbnHfFYwFipYTxqQ5kVfTR6IozLUz4AfYdC.jpg" width="50"/>
+                            <img alt="User profile picture" height="50" src="../../assets/image/good.jpg" width="50"/>
                             <div>
                                 <div class="user-name">Myx Hạnh</div>
                                 <div class="rating">
@@ -284,7 +284,7 @@
                 <div class="testimonial-card">
                     <div class="user-info-container">
                         <div class="user-info">
-                            <img alt="User profile picture" height="50" src="https://storage.googleapis.com/a1aa/image/e7fSXhdvH6imp0WbnHfFYwFipYTxqQ5kVfTR6IozLUz4AfYdC.jpg" width="50"/>
+                            <img alt="User profile picture" height="50" src="../../assets/image/good.jpg" width="50"/>
                             <div>
                                 <div class="user-name">Myx Hạnh</div>
                                 <div class="rating">
@@ -306,7 +306,7 @@
                 <div class="testimonial-card">
                     <div class="user-info-container">
                         <div class="user-info">
-                            <img alt="User profile picture" height="50" src="https://storage.googleapis.com/a1aa/image/e7fSXhdvH6imp0WbnHfFYwFipYTxqQ5kVfTR6IozLUz4AfYdC.jpg" width="50"/>
+                            <img alt="User profile picture" height="50" src="../../assets/image/good.jpg" width="50"/>
                             <div>
                                 <div class="user-name">Myx Hạnh</div>
                                 <div class="rating">
@@ -325,7 +325,7 @@
                 <div class="testimonial-card">
                     <div class="user-info-container">
                         <div class="user-info">
-                            <img alt="User profile picture" height="50" src="https://storage.googleapis.com/a1aa/image/e7fSXhdvH6imp0WbnHfFYwFipYTxqQ5kVfTR6IozLUz4AfYdC.jpg" width="50"/>
+                            <img alt="User profile picture" height="50" src="../../assets/image/good.jpg" width="50"/>
                             <div>
                                 <div class="user-name">Myx Hạnh</div>
                                 <div class="rating">
@@ -346,21 +346,21 @@
         <footer class="footer">
             <div class="footer-btm">
                 <div class="offline-store__container">
-                    <img src="/BTLWEB/public/assets/image/store-svgrepo-com.svg" alt="">
+                    <img src="../../assets/image/store-svgrepo-com.svg" alt="">
                     <div class="footer-content">
                         <h3>10000+</h3>
                         <p>Offline Stores</p>
                     </div>
                 </div>
                 <div class="offline-store__container">
-                    <img src="/BTLWEB/public/assets/image/location-pin-svgrepo-com.svg" alt="">
+                    <img src="../../assets/image/location-pin-svgrepo-com.svg" alt="">
                     <div class="footer-content">
                         <h3>40000+</h3>
                         <p>Pincodes Served</p>
                     </div>
                 </div>
                 <div class="offline-store__container">
-                    <img src="/BTLWEB/public/assets/image/usercustomer.png" alt="">
+                    <img src="../../assets/image/usercustomer.png" alt="">
                     <div class="footer-content">
                         <h3>5M+ </h3>
                         <p>Happy Customers</p>
@@ -369,7 +369,7 @@
             </div>
             <div class="footer-top">
                 <div class="footer-logo">
-                    <img src="/BTLWEB/public/assets/image/logohieuthuoc.png" alt="">
+                    <img src="../../assets/image/logohieuthuoc.png" alt="">
                 </div>
                 <div class="footer-txt">
                     <p>Netmeds.com is one of India's most trusted pharmacies, dispensing quality medicines at reasonable prices to over 9 million happy customers – PAN India.</p>
@@ -485,10 +485,10 @@
                             </div>
                             <div class="box-sub__down-app">
                                 <a href="#">
-                                    <img src="/BTLWEB/public/assets/image/play_store.png" alt="">
+                                    <img src="../../assets/image/play_store.png" alt="">
                                 </a>
                                 <a href="#">
-                                    <img src="/BTLWEB/public/assets/image/app_store.png" alt="">
+                                    <img src="../../assets/image/app_store.png" alt="">
                                 </a>
                             </div>
                         </div>
@@ -498,11 +498,11 @@
                     <div class="boxfooter">
                         <h3>Our Payment Partent</h3>
                         <div class="our-partners">
-                            <img src="/BTLWEB/public/assets/image/paytm.svg" alt="">
-                            <img src="/BTLWEB/public/assets/image/simpl.svg" alt="">
-                            <img src="/BTLWEB/public/assets/image/rupay.svg" alt="">
-                            <img src="/BTLWEB/public/assets/image/visa.svg" alt="">
-                            <img src="/BTLWEB/public/assets/image/mastercard.svg" alt="">
+                            <img src="../../assets/image/paytm.svg" alt="">
+                            <img src="../../assets/image/simpl.svg" alt="">
+                            <img src="../../assets/image/rupay.svg" alt="">
+                            <img src="../../assets/image/visa.svg" alt="">
+                            <img src="../../assets/image/mastercard.svg" alt="">
                         </div>
                     </div>
                 </div>
@@ -511,22 +511,22 @@
                     <div class="social-network-img">
                         <span>
                             <a href="">
-                                <img src="/BTLWEB/public/assets/image/faceboook.svg" alt="">
+                                <img src="../../assets/image/faceboook.svg" alt="">
                             </a>
                         </span>
                         <span>
                             <a href="">
-                                <img src="/BTLWEB/public/assets/image/google.png" alt="">
+                                <img src="../../assets/image/google.png" alt="">
                             </a>
                         </span>
                         <span>
                             <a href="">
-                                <img src="/BTLWEB/public/assets/image/free-twitter-logo-icon-2429-thumb.png" alt="">
+                                <img src="../../assets/image/free-twitter-logo-icon-2429-thumb.png" alt="">
                             </a>
                         </span>
                         <span>
                             <a href="">
-                                <img src="/BTLWEB/public/assets/image/Instagram_logo_2016.svg.webp" alt="">
+                                <img src="../../assets/image/Instagram_logo_2016.svg.webp" alt="">
                             </a>
                         </span>
                     </div>
@@ -565,7 +565,7 @@
         </header>
         <ul class="chatbox">
             <li class="chat incoming">
-                <span><img src="/BTLWEB/public/assets/image/avatar.webp" alt="" class="avatar"></span>
+                <span><img src="../../assets/image/avatar.webp" alt="" class="avatar"></span>
                 <p>Cảm ơn Anh/Chị đã liên hệ Nhà thuốc AH3T. Chúng mình có thể hỗ trợ gì cho quý khách hàng ạ.</p>
             </li>
 
