--- a/productshop/shopproduct.html
+++ b/productshop/shopproduct.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pillcare Shop</title>
+    <meta property="og:title" content="Web Medical Management - Efficient Pharmacy Management">
+    <link rel="icon" type="image/jpg" href="../../assets/image/logo.jpg">
+    <meta property="og:description" content="Manage your pharmacy with ease. Track inventory, handle prescriptions, and serve your patients effectively.">
+    <meta property="og:image" content="../../assets/image/logo.jpg">
+    <meta property="og:url" content="https://example.com/pharmacy-management">
+    <meta property="og:type" content="website">
+    <title>Medical Management </title>
 
     <link rel="stylesheet" href="/BTLWEB/productshop/main.css">
     <link rel="stylesheet" href="/BTLWEB/productshop/base.css">
@@ -25,7 +31,7 @@
             <!-- Nút toggle cho mobile -->
             <button class="navbar-toggler d-lg-none" type="button" aria-label="Toggle navigation" data-toggle="collapse" data-target="#navbarNav">
                 <span class="navbar-toggler-icon">
-                    <img src="/public/assets/icons/SVG/8666802_menu_navigation_icon.svg" alt="">
+                    <img src="/BTLWEB/public/assets/icons/SVG/8666802_menu_navigation_icon.svg" alt="">
                 </span>
             </button>
     
@@ -42,10 +48,10 @@
             <!-- Sign-in bên phải -->
             <div class="user">
                 <a class="user-icon" href="#">
-                    <img src="/public/assets/icons/SVG/9024006_user_circle_fill_icon.svg" alt="">
+                    <img src="/BTLWEB/public/assets/icons/SVG/9024006_user_circle_fill_icon.svg" alt="">
                 </a>
                 <div class="navbar-signin">
-                    <a class="sign-in" href="/formauth/index.html">Sign in</a>
+                    <a class="sign-in" href="/BTLWEB/formauth/index.html">Sign in</a>
                 </div>
             </div>
         </div>
@@ -173,21 +179,21 @@
     <footer class="footer">
         <div class="footer-btm">
             <div class="offline-store__container">
-                <img src="/public/assets/image/store-svgrepo-com.svg" alt="">
+                <img src="/BTLWEB/public/assets/image/store-svgrepo-com.svg" alt="">
                 <div class="footer-content">
                     <h3>10000+</h3>
                     <p>Offline Stores</p>
                 </div>
             </div>
             <div class="offline-store__container">
-                <img src="/public/assets/image/location-pin-svgrepo-com.svg" alt="">
+                <img src="/BTLWEB/public/assets/image/location-pin-svgrepo-com.svg" alt="">
                 <div class="footer-content">
                     <h3>40000+</h3>
                     <p>Pincodes Served</p>
                 </div>
             </div>
             <div class="offline-store__container">
-                <img src="/public/assets/image/usercustomer.png" alt="">
+                <img src="/BTLWEB/public/assets/image/usercustomer.png" alt="">
                 <div class="footer-content">
                     <h3>5M+ </h3>
                     <p>Happy Customers</p>
@@ -196,7 +202,7 @@
         </div>
         <div class="footer-top">
             <div class="footer-logo">
-                <img src="/public/assets/image/logohieuthuoc.png" alt="">
+                <img src="/BTLWEB/public/assets/image/logohieuthuoc.png" alt="">
             </div>
             <div class="footer-txt">
                 <p>Netmeds.com is one of India's most trusted pharmacies, dispensing quality medicines at reasonable prices to over 9 million happy customers – PAN India.</p>
@@ -312,10 +318,10 @@
                         </div>
                         <div class="box-sub__down-app">
                             <a href="#">
-                                <img src="/public/assets/image/play_store.png" alt="">
+                                <img src="/BTLWEB/public/assets/image/play_store.png" alt="">
                             </a>
                             <a href="#">
-                                <img src="/public/assets/image/app_store.png" alt="">
+                                <img src="/BTLWEB/public/assets/image/app_store.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -325,13 +331,11 @@
                 <div class="boxfooter">
                     <h3>Our Payment Partent</h3>
                     <div class="our-partners">
-                        <img src="/public/assets/image/google-pay.svg" alt="">
-                        <img src="/public/assets/image/phonepe.svg" alt="">
-                        <img src="/public/assets/image/paytm.svg" alt="">
-                        <img src="/public/assets/image/simpl.svg" alt="">
-                        <img src="/public/assets/image/rupay.svg" alt="">
-                        <img src="/public/assets/image/visa.svg" alt="">
-                        <img src="/public/assets/image/mastercard.svg" alt="">
+                        <img src="/BTLWEB/public/assets/image/paytm.svg" alt="">
+                        <img src="/BTLWEB/public/assets/image/simpl.svg" alt="">
+                        <img src="/BTLWEB/public/assets/image/rupay.svg" alt="">
+                        <img src="/BTLWEB/public/assets/image/visa.svg" alt="">
+                        <img src="/BTLWEB/public/assets/image/mastercard.svg" alt="">
                     </div>
                 </div>
             </div>
@@ -340,22 +344,22 @@
                 <div class="social-network-img">
                     <span>
                         <a href="">
-                            <img src="/public/assets/image/faceboook.svg" alt="">
+                            <img src="/BTLWEB/public/assets/image/faceboook.svg" alt="">
                         </a>
                     </span>
                     <span>
                         <a href="">
-                            <img src="/public/assets/image/google.png" alt="">
+                            <img src="/BTLWEB/public/assets/image/google.png" alt="">
                         </a>
                     </span>
                     <span>
                         <a href="">
-                            <img src="/public/assets/image/free-twitter-logo-icon-2429-thumb.png" alt="">
+                            <img src="/BTLWEB/public/assets/image/free-twitter-logo-icon-2429-thumb.png" alt="">
                         </a>
                     </span>
                     <span>
                         <a href="">
-                            <img src="/public/assets/image/Instagram_logo_2016.svg.webp" alt="">
+                            <img src="/BTLWEB/public/assets/image/Instagram_logo_2016.svg.webp" alt="">
                         </a>
                     </span>
                 </div>
@@ -380,7 +384,7 @@
         </div>
     </footer>
     <script src="./main.js"></script>
-    <script src="/public/info/home/script.js"></script>
+    <script src="/BTLWEB/public/info/home/script.js"></script>
 
 </body>
 </html>
