--- a/productshop/shopproduct.html
+++ b/productshop/shopproduct.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Web Medical Management - Efficient Pharmacy Management">
-    <link rel="icon" type="image/jpg" href="../../assets/image/logo.jpg">
+    <link rel="icon" type="image/jpg" href="/BTLWEB/public/assets/image/logo.jpg">
     <meta property="og:description" content="Manage your pharmacy with ease. Track inventory, handle prescriptions, and serve your patients effectively.">
-    <meta property="og:image" content="../../assets/image/logo.jpg">
+    <meta property="og:image" content="/BTLWEB/public/assets/image/logo.jpg">
     <meta property="og:url" content="https://example.com/pharmacy-management">
     <meta property="og:type" content="website">
     <title>Medical Management </title>
@@ -25,7 +25,7 @@
         <div class="container-fluid d-flex justify-content-between align-items-center">
             <!-- Logo bên trái -->
             <div class="logo">
-                <img alt="Company Logo" src="/BTLWEB/public/assets/image/logo.jpg" width="60px" height="60px"/>
+                <img alt="Company Logo" src="./BTLWEB/public/assets/image/logo.jpg" width="60px" height="60px"/>
             </div>
     
             <!-- Nút toggle cho mobile -->
