--- a/productshop/sick.html
+++ b/productshop/sick.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Web Medical Management - Efficient Pharmacy Management">
-    <link rel="icon" type="image/jpg" href="../../assets/image/logo.jpg">
+    <link rel="icon" type="image/jpg" href="/BTLWEB/public/assets/image/logo.jpg">
     <meta property="og:description" content="Manage your pharmacy with ease. Track inventory, handle prescriptions, and serve your patients effectively.">
-    <meta property="og:image" content="../../assets/image/logo.jpg">
+    <meta property="og:image" content="/BTLWEB/public/assets/image/logo.jpg">
     <meta property="og:url" content="https://example.com/pharmacy-management">
     <meta property="og:type" content="website">
     <title>Medical Management </title>
@@ -48,7 +48,7 @@
     
             <!-- Sign-in bên phải -->
             <div class="user">
-                <a class="user-icon" href="/formauth/profile.html">
+                <a class="user-icon" href="/BTLWEB/formauth/profile.html">
                     <img src="/BTLWEB/public/assets/icons/SVG/9024006_user_circle_fill_icon.svg" alt="">
                 </a>
                 <div class="navbar-signin">
