--- a/man/html/index_a.html
+++ b/man/html/index_a.html
@@ -10,6 +10,7 @@
     <meta property="og:url" content="https://example.com/pharmacy-management">
     <meta property="og:type" content="website">
     <title>Medical Management </title>
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="/BTLWEB/man/css/styles_a.css">
     <link rel="stylesheet" href="/BTLWEB/formauth/assets/style/nav.css">
@@ -129,6 +130,6 @@
         </section>
     </main>
 
-    <script src="/man/js/script_a.js"></script>
+    <script src="/BTLWEB/man/js/script_a.js"></script>
 </body>
 </html>
