--- a/formauth/index.html
+++ b/formauth/index.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Web Medical Management - Efficient Pharmacy Management">
+    <link rel="icon" type="image/jpg" href="/BTLWEB/public/assets/image/logo.jpg">
+    <meta property="og:description" content="Manage your pharmacy with ease. Track inventory, handle prescriptions, and serve your patients effectively.">
+    <meta property="og:image" content="/BTLWEB/public/assets/image/logo.jpg">
+    <meta property="og:url" content="https://example.com/pharmacy-management">
+    <meta property="og:type" content="website">
+    <title>Medical Management </title>
+    
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +23,7 @@
 <body>
     <div class="wrapper">
         <span class="icon-close">
-           <a href="/public/info/home/index.html"> <i class='bx bx-x'></i></a>
+           <a href="/BTLWEB/public/info/home/index.html"> <i class='bx bx-x'></i></a>
         </span>
         <div class="form-box active" id="login">
             <h2>Login</h2>
