--- a/Detail-P/neomol-infusion.html
+++ b/Detail-P/neomol-infusion.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NEOMOL I.V Infusion 100ml - Rapid Pain Relief</title>
+    <meta property="og:title" content="Web Medical Management - Efficient Pharmacy Management">
+    <link rel="icon" type="image/jpg" href="/BTLWEB/public/assets/image/logo.jpg">
+    <meta property="og:description" content="Manage your pharmacy with ease. Track inventory, handle prescriptions, and serve your patients effectively.">
+    <meta property="og:image" content="/BTLWEB/public/assets/image/logo.jpg">
+    <meta property="og:url" content="https://example.com/pharmacy-management">
+    <meta property="og:type" content="website">
+    <title>Medical Management </title>
+    
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
