--- a/Detail-P/2baconil.html
+++ b/Detail-P/2baconil.html
@@ -260,5 +260,7 @@
             </div>
         </div>
     </div>
+
+    <script src="/BTLWEB/public/info/home/script.js"></script>
 </body>
 </html>
