--- a/Detail-P/cerave-moisturising-cream.html
+++ b/Detail-P/cerave-moisturising-cream.html
@@ -46,8 +46,8 @@
         <!-- Navbar chính giữa -->
         <nav class="navbar collapse" id="navbarNav">
             <div class="navbar-links">
-                <a href="/BTLWEB/public/info/home/index.html" class="active">Trang chủ</a>
-                <a href="/BTLWEB/productshop/shopproduct.html">Cửa hàng</a>
+                <a href="/BTLWEB/public/info/home/index.html">Trang chủ</a>
+                <a href="/BTLWEB/productshop/shopproduct.html" class="active">Cửa hàng</a>
                 <a href="/BTLWEB/productshop/sick.html">Tra cứu bệnh</a>
                 <a href="/BTLWEB/man/html/index_m.html">Quản lý</a>
             </div>
@@ -67,8 +67,8 @@
 
 <div class="navbar-mobile" id="navbarNavMobile">
     <div class="navbar-links">
-        <a href="/BTLWEB/public/info/home/index.html" class="active">Trang chủ</a>
-        <a href="/BTLWEB/productshop/shopproduct.html">Cửa hàng</a>
+        <a href="/BTLWEB/public/info/home/index.html">Trang chủ</a>
+        <a href="/BTLWEB/productshop/shopproduct.html" class="active">Cửa hàng</a>
         <a href="/BTLWEB/productshop/sick.html">Tra cứu bệnh</a>
         <a href="/BTLWEB/man/html/index_m.html">Quản lý</a>
     </div>
