--- a/Detail-P/vick-inhaler.html
+++ b/Detail-P/vick-inhaler.html
@@ -12,6 +12,7 @@
     <title>Medical Management </title>
     
     <link rel="stylesheet" href="styles.css">
+     <link rel="stylesheet" href="/BTLWEB/formauth/assets/style/nav.css">
     <script src="script.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -27,6 +28,51 @@
 </head>
 
 <body>
+    <header class="header">
+    <div class="container-fluid d-flex justify-content-between align-items-center">
+        <!-- Logo bên trái -->
+        <div class="logo">
+            <img alt="Company Logo" src="/BTLWEB/public/assets/image/logo.jpg" width="60px" height="60px"/>
+        </div>
+
+        <!-- Nút toggle cho mobile -->
+        <button class="navbar-toggler d-lg-none" type="button" aria-label="Toggle navigation" data-toggle="collapse" data-target="#navbarNav">
+            <span class="navbar-toggler-icon">
+                <img src="/BTLWEB/public/assets/icons/SVG/8666802_menu_navigation_icon.svg" alt="">
+            </span>
+        </button>
+
+        <!-- Navbar chính giữa -->
+        <nav class="navbar collapse" id="navbarNav">
+            <div class="navbar-links">
+                <a href="/BTLWEB/public/info/home/index.html">Trang chủ</a>
+                <a href="/BTLWEB/productshop/shopproduct.html" class="active">Cửa hàng</a>
+                <a href="/BTLWEB/productshop/sick.html">Tra cứu bệnh</a>
+                <a href="/BTLWEB/man/html/index_m.html">Quản lý</a>
+            </div>
+        </nav>
+
+        <!-- Sign-in bên phải -->
+        <div class="user">
+            <a class="user-icon" href="#">
+                <img src="/BTLWEB/public/assets/icons/SVG/9024006_user_circle_fill_icon.svg" alt="">
+            </a>
+            <div class="navbar-signin">
+                <a class="sign-in" href="/BTLWEB/formauth/index.html">Sign in</a>
+            </div>
+        </div>
+    </div>
+</header> 
+
+<div class="navbar-mobile" id="navbarNavMobile">
+    <div class="navbar-links">
+        <a href="/BTLWEB/public/info/home/index.html">Trang chủ</a>
+        <a href="/BTLWEB/productshop/shopproduct.html" class="active">Cửa hàng</a>
+        <a href="/BTLWEB/productshop/sick.html">Tra cứu bệnh</a>
+        <a href="/BTLWEB/man/html/index_m.html">Quản lý</a>
+    </div>
+</div>  
+<script src="/BTLWEB/public/info/home/script.js"></script>
     <div class="page-wrapper">
         <div class="content-section">
             <div class="image-block col-4">
