--- a/man/html/index_a.html
+++ b/man/html/index_a.html
@@ -131,5 +131,6 @@
     </main>
 
     <script src="/BTLWEB/man/js/script_a.js"></script>
+    <script src="/BTLWEB/public/info/home/script.js"></script>
 </body>
 </html>
