--- a/man/html/index_cr.html
+++ b/man/html/index_cr.html
@@ -171,6 +171,6 @@
         </div>
 
         <script src="/BTLWEB/man/js/script_cr.js"></script>
-        
+        <script src="/BTLWEB/public/info/home/script.js"></script>
     </body>
 </html>
