--- a/man/html/index_m.html
+++ b/man/html/index_m.html
@@ -107,5 +107,6 @@
         <script src="/BTLWEB/man/js/script_m.js"></script> 
         <script src="/BTLWEB/man/js/script_m_revenue.js"></script>
         <script src="/BTLWEB/man/js/script_m_low.js"></script>
+        <script src="/BTLWEB/public/info/home/script.js"></script>
     </body> 
 </html>
