--- a/productshop/sick.html
+++ b/productshop/sick.html
@@ -40,8 +40,8 @@
             <nav class="navbar collapse" id="navbarNav">
                 <div class="navbar-links">
                     <a href="/BTLWEB/public/info/home/index.html">Trang chủ</a>
-                    <a href="/BTLWEB/productshop/shopproduct.html" class="active">Cửa hàng</a>
-                    <a href="/BTLWEB/productshop/sick.html">Tra cứu bệnh</a>
+                    <a href="/BTLWEB/productshop/shopproduct.html">Cửa hàng</a>
+                    <a href="/BTLWEB/productshop/sick.html" class="active">Tra cứu bệnh</a>
                     <a href="/BTLWEB/man/html/index_m.html">Quản lý</a>
                 </div>
             </nav>
@@ -61,8 +61,8 @@
     <div class="navbar-mobile" id="navbarNavMobile">
         <div class="navbar-links">
             <a href="/BTLWEB/public/info/home/index.html">Trang chủ</a>
-            <a href="/BTLWEB/productshop/shopproduct.html" class="active">Cửa hàng</a>
-            <a href="/BTLWEB/productshop/sick.html">Tra cứu bệnh</a>
+            <a href="/BTLWEB/productshop/shopproduct.html">Cửa hàng</a>
+            <a href="/BTLWEB/productshop/sick.html" class="active">Tra cứu bệnh</a>
             <a href="/BTLWEB/man/html/index_m.html">Quản lý</a>
         </div>
     </div>  
