--- a/man/html/index_m.html
+++ b/man/html/index_m.html
@@ -104,8 +104,8 @@
             </section>
         </main>
 
-        <script src="/BTLWEB/man/js/script_m.js"></script> 
-        <script src="/BTLWEB/man/js/script_m_revenue.js"></script>
+        <script src="BTLWEB/man/js/script_m.js"></script> 
+        <script src="BTLWEB/man/js/script_m_revenue.js"></script>
         <script src="/BTLWEB/man/js/script_m_low.js"></script>
         <script src="/BTLWEB/public/info/home/script.js"></script>
     </body> 
